# ERPGrafico

./: .dockerignore  .env.dev  .env.devcloud  .env.example  .gitignore  .vercelignore  .versionrc.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_NPM.md  analysis_report.md  apply_idempotency.py  backend_error_import.txt  backend_full_logs.txt  backend_logs.txt  backend_logs_2.txt  backend_logs_2_utf8.txt  backend_logs_utf8.txt  check_db_schema.py  check_integrity.py  debug_backend_logs.txt  debug_metrics.py  debug_migrations.txt  debug_output.txt  demo_error.txt  demo_error_v2.txt  diff_files.txt  docker-compose.cloud-dev.yml  docker-compose.hybrid.yml  docker-compose.prod-dev.yml  docker-compose.prod.yml  docker-compose.stable.yml  docker-compose.staging.yml  docker-compose.yml  docker_ps.txt  fix_all.py  fix_bulk.py  fix_contacts.py  fix_contacts_all.py  fix_get_or_create.py  (+27 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
audit/: cancel-annul-entity-audit.md
backend/: .dockerignore  Dockerfile  auto_makemigrations.py  backend_error.txt  capture_traceback.py  check_output.txt  check_product_moves.py  check_table.py  conftest.py  db.sqlite3  db.sqlite3-journal  db.sqlite3.bak  debug_check.py  debug_check_log.py  debug_delivery.py  debug_delivery_v2.py  debug_integrity.py  debug_periods.py  debug_pos.py  debug_pos_simulate.py  debug_product.txt  debug_products.py  (+63 more)
backend/rust_ext/: Cargo.toml  pyproject.toml
backend/rust_ext/src/: lib.rs
backend/rust_ext/src/matching/: mod.rs  normalize.rs  score.rs
backend/rust_ext/tests/: fidelity_test.py
(+3506 files in other folders)
