[package]
name = "erpgrafico_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "erpgrafico_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
strsim = "0.11"
